--- a/css/hcs.css
+++ b/css/hcs.css
@@ -1,4 +1,4 @@
-@import url("https://test.transnetpt.com/ArminGrotesk/ArminGrotesk.css");
+@import url("https://beta.transnetpt.com/ArminGrotesk/ArminGrotesk.css");
 
 :root {
     /* Colours */
